--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,86 @@ node_modules/ws/lib/validation.js
 node_modules/ws/lib/websocket-server.js
 node_modules/ws/lib/websocket.js
 plan.txt
+node_modules/.bin/uuid
+node_modules/.bin/uuid.cmd
+node_modules/.bin/uuid.ps1
+node_modules/uuid/CHANGELOG.md
+node_modules/uuid/CONTRIBUTING.md
+node_modules/uuid/LICENSE.md
+node_modules/uuid/package.json
+node_modules/uuid/README.md
+node_modules/uuid/wrapper.mjs
+node_modules/uuid/dist/index.js
+node_modules/uuid/dist/md5-browser.js
+node_modules/uuid/dist/md5.js
+node_modules/uuid/dist/native-browser.js
+node_modules/uuid/dist/native.js
+node_modules/uuid/dist/nil.js
+node_modules/uuid/dist/parse.js
+node_modules/uuid/dist/regex.js
+node_modules/uuid/dist/rng-browser.js
+node_modules/uuid/dist/rng.js
+node_modules/uuid/dist/sha1-browser.js
+node_modules/uuid/dist/sha1.js
+node_modules/uuid/dist/stringify.js
+node_modules/uuid/dist/uuid-bin.js
+node_modules/uuid/dist/v1.js
+node_modules/uuid/dist/v3.js
+node_modules/uuid/dist/v4.js
+node_modules/uuid/dist/v5.js
+node_modules/uuid/dist/v35.js
+node_modules/uuid/dist/validate.js
+node_modules/uuid/dist/version.js
+node_modules/uuid/dist/bin/uuid
+node_modules/uuid/dist/commonjs-browser/index.js
+node_modules/uuid/dist/commonjs-browser/md5.js
+node_modules/uuid/dist/commonjs-browser/native.js
+node_modules/uuid/dist/commonjs-browser/nil.js
+node_modules/uuid/dist/commonjs-browser/parse.js
+node_modules/uuid/dist/commonjs-browser/regex.js
+node_modules/uuid/dist/commonjs-browser/rng.js
+node_modules/uuid/dist/commonjs-browser/sha1.js
+node_modules/uuid/dist/commonjs-browser/stringify.js
+node_modules/uuid/dist/commonjs-browser/v1.js
+node_modules/uuid/dist/commonjs-browser/v3.js
+node_modules/uuid/dist/commonjs-browser/v4.js
+node_modules/uuid/dist/commonjs-browser/v5.js
+node_modules/uuid/dist/commonjs-browser/v35.js
+node_modules/uuid/dist/commonjs-browser/validate.js
+node_modules/uuid/dist/commonjs-browser/version.js
+node_modules/uuid/dist/esm-browser/index.js
+node_modules/uuid/dist/esm-browser/md5.js
+node_modules/uuid/dist/esm-browser/native.js
+node_modules/uuid/dist/esm-browser/nil.js
+node_modules/uuid/dist/esm-browser/parse.js
+node_modules/uuid/dist/esm-browser/regex.js
+node_modules/uuid/dist/esm-browser/rng.js
+node_modules/uuid/dist/esm-browser/sha1.js
+node_modules/uuid/dist/esm-browser/stringify.js
+node_modules/uuid/dist/esm-browser/v1.js
+node_modules/uuid/dist/esm-browser/v3.js
+node_modules/uuid/dist/esm-browser/v4.js
+node_modules/uuid/dist/esm-browser/v5.js
+node_modules/uuid/dist/esm-browser/v35.js
+node_modules/uuid/dist/esm-browser/validate.js
+node_modules/uuid/dist/esm-browser/version.js
+node_modules/uuid/dist/esm-node/index.js
+node_modules/uuid/dist/esm-node/md5.js
+node_modules/uuid/dist/esm-node/native.js
+node_modules/uuid/dist/esm-node/nil.js
+node_modules/uuid/dist/esm-node/parse.js
+node_modules/uuid/dist/esm-node/regex.js
+node_modules/uuid/dist/esm-node/rng.js
+node_modules/uuid/dist/esm-node/sha1.js
+node_modules/uuid/dist/esm-node/stringify.js
+node_modules/uuid/dist/esm-node/v1.js
+node_modules/uuid/dist/esm-node/v3.js
+node_modules/uuid/dist/esm-node/v4.js
+node_modules/uuid/dist/esm-node/v5.js
+node_modules/uuid/dist/esm-node/v35.js
+node_modules/uuid/dist/esm-node/validate.js
+node_modules/uuid/dist/esm-node/version.js
+Test/Chromium/contentScript.js
+Test/Chromium/main.js
+Test/Chromium/manifest.json
+Test/Chromium/icon/icon.png
