--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "commander": "^11.0.0",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
