--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^11.0.0",
+    "ps-list": "^8.1.1",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
