--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^11.0.0",
-    "ps-list": "^8.1.1",
+    "is-running": "^2.1.0",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
